<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey"
    tools:context=".fragment.ProfileSettingPersonal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/edtFirstName"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/first_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <EditText

                    android:id="@+id/edtLastName"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/last_name" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Speciality" />

                <EditText

                    android:id="@+id/edtSpeciality"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/Speciality"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Speciality_subcategory" />

                <EditText
                    android:id="@+id/edtSubSpeciality"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/Speciality_subcategory" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education" />

                <EditText

                    android:id="@+id/edtEducation"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/education"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Language_Spoken" />

                <EditText
                    android:id="@+id/edtLanguageSpoken"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/Language_Spoken_Language_Spoken"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total_years_of_experience" />

                <EditText
                    android:id="@+id/edtExperience"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/years_of_experience"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Address" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/profile_edt_bg"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="top"
                    android:hint="@string/Address"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/action_mode_color_edt"
                    android:textSize="@dimen/_16sdp"

                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/Update_Photo"
                        android:textAlignment="center"
                        android:textColor="@color/action_mode_color_edt" />

                    <TextView
                        android:id="@+id/txtChoosePhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_bg"
                        android:fontFamily="@font/montserrat_regular"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/Choose_new_photo"
                        android:textAlignment="center"
                        android:textColor="@color/action_mode_color_edt" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/Submit"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_20sdp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>