<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey"
    tools:context=".fragment.ProfileSettingPersonal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:scaleType="centerCrop"
                    android:src="@color/action_mode_color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/edtFirstName"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/first_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/last_name"
                    style="@style/Profile_setting_personal" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Speciality" />

                <EditText
                    android:id="@+id/edtSpeciality"
                    style="@style/Profile_setting_personal"                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/Speciality"
                />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Speciality_subcategory" />

                <EditText
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/Speciality_subcategory"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education" />

                <EditText
                    android:id="@+id/edtEducation"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/education"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Language_Spoken" />

                <EditText
                    android:id="@+id/edtLanguageSpoken"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/Language_Spoken_Language_Spoken"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total_years_of_experience" />

                <EditText
                    android:id="@+id/edtExperience"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/years_of_experience"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_70sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/sub_heading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Address" />

                <EditText
                    android:id="@+id/edtAddress"
                    style="@style/Profile_setting_personal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="top"
                    android:hint="@string/Address"
                     />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>